<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".Main2Activity" >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="184dp"
        android:layout_height="205dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="114dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dlorr" />

    <TextView
        android:id="@+id/txtconversor"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="175dp"
        android:text="@string/txtconversor"
        android:textAlignment="center"
        android:textColor="@color/colorBotones"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editmonto"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorLetra1"
        android:ems="10"
        android:hint="@string/editmonto"
        android:inputType="number"
        android:textColor="@color/colorLetra1"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtconversor" />

    <TextView
        android:id="@+id/textmoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="175dp"
        android:text="@string/textmoneda"
        android:textColor="@color/colorLetra1"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editmonto" />

    <RadioButton
        android:id="@+id/rdbDolar"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="210dp"
        android:text="@string/rdbDolar"
        android:textColor="@color/colorBotones"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmoneda" />

    <RadioButton
        android:id="@+id/rdbEuro"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="210dp"
        android:text="@string/rdbEuro"
        android:textColor="@color/colorBotones"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbDolar" />

    <RadioButton
        android:id="@+id/rdbReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="210dp"
        android:text="@string/rdbReal"
        android:textColor="@color/colorBotones"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbEuro" />

    <EditText
        android:id="@+id/editResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorLetra1"
        android:ems="10"
        android:hint="@string/editResultado"
        android:inputType="number"
        android:textColor="@color/colorLetra1"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbReal" />

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnConvertir"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/btnReiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editResultado" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnReiniciar"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConvertir"
        app:layout_constraintTop_toBottomOf="@+id/editResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>