<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="255dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgandroid" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnSuma"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/btnresta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCero" />

    <Button
        android:id="@+id/btnzoom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnzoom1"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/btnzoom2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnocultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnocultar"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/btnreset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnzoom1" />

    <Button
        android:id="@+id/btnresta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnresta"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/txtCero" />

    <Button
        android:id="@+id/btnzoom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnzoom2"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnzoom1"
        app:layout_constraintTop_toBottomOf="@+id/btnresta" />

    <Button
        android:id="@+id/btnreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorBotones"
        android:text="@string/btnreset"
        android:textColor="@color/colorLetra1"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnocultar"
        app:layout_constraintTop_toBottomOf="@+id/btnzoom2" />

    <TextView
        android:id="@+id/txtCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="177dp"
        android:text="@string/txtCero"
        android:textColor="@color/colorLetra1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>